[gd_scene load_steps=25 format=2]

[ext_resource path="res://main/world/character/enemy/armadillot/sprites/armadillot_body_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://main/world/character/enemy/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://main/world/character/enemy/states/enemy_idle.gd" type="Script" id=3]
[ext_resource path="res://main/world/character/enemy/states/enemy_bounce.gd" type="Script" id=4]
[ext_resource path="res://main/world/character/enemy/armadillot/armadillot.gd" type="Script" id=5]
[ext_resource path="res://main/world/character/enemy/armadillot/sprites/armadillot_top_spritesheet.png" type="Texture" id=6]
[ext_resource path="res://main/world/character/enemy/armadillot/sprites/armadillot_blur_top_spritesheet.png" type="Texture" id=7]
[ext_resource path="res://main/world/character/enemy/armadillot/sprites/armadillot_trail.png" type="Texture" id=8]
[ext_resource path="res://main/world/character/enemy/armadillot/states/charge.gd" type="Script" id=9]
[ext_resource path="res://main/world/character/enemy/armadillot/sprites/toy_ring.png" type="Texture" id=10]
[ext_resource path="res://main/world/random_sound_spawner/random_sound_spawner.gd" type="Script" id=11]
[ext_resource path="res://main/world/character/enemy/armadillot/sounds/wind_and_release.wav" type="AudioStream" id=12]
[ext_resource path="res://main/world/character/enemy/armadillot/sounds/bump.wav" type="AudioStream" id=13]

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0.00900901, 0.324324, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 0.807843, 0.945098, 1, 0.776471, 1, 1, 1, 0 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Top:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
length = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Top:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprites/Top:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
length = 0.075
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Top:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.05, 0.075 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1, 2, 3, 3 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/BlurTop:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/BlurTop:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.075
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/BlurTop:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.05, 0.075 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1, 2, 3, 3 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 180.0

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 1, 1, 1, 1, 0.402344, 0.0644379, 0.0644379, 0 )

[node name="Armadillot" instance=ExtResource( 2 )]
script = ExtResource( 5 )
move_speed = 290.0
max_health = 3.0
uses_physics_process = false
score_orb_count = 8
flash_time = 0.3
flash_time_min = 0.01
flash_length = 0.05
flash_cutoff = 0.4
anim_speed_min = 0.2

[node name="Hitbox" parent="." index="0"]
collision_mask = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 2 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="Trail" type="CPUParticles2D" parent="Sprites" index="0"]
amount = 4
lifetime = 0.5
speed_scale = 2.0
local_coords = false
texture = ExtResource( 8 )
gravity = Vector2( 0, 42 )
color_ramp = SubResource( 11 )

[node name="String" type="Line2D" parent="Sprites" index="1"]
points = PoolVector2Array( 0, 0, 16.1, 0 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )

[node name="Ring" type="Sprite" parent="Sprites" index="2"]
texture = ExtResource( 10 )

[node name="Body" type="Sprite" parent="Sprites" index="3"]
texture = ExtResource( 1 )
hframes = 4

[node name="Top" type="Sprite" parent="Sprites" index="4"]
texture = ExtResource( 6 )
hframes = 4

[node name="BlurTop" type="Sprite" parent="Sprites" index="5"]
visible = false
texture = ExtResource( 7 )
hframes = 4
frame = 1

[node name="WindReleaseSounds" type="Node2D" parent="Sounds" index="2"]
script = ExtResource( 11 )
sounds = [ ExtResource( 12 ) ]
volume = -9.0
rand_pitch_range = 0.1
max_distance = 190

[node name="Bump" type="Node2D" parent="Sounds" index="3"]
script = ExtResource( 11 )
sounds = [ ExtResource( 13 ) ]
volume = -8.0
rand_pitch_range = 0.1
max_distance = 350

[node name="VisibilityEnabler2D" parent="." index="4"]
rect = Rect2( -32, -32, 64, 64 )

[node name="Top" type="AnimationPlayer" parent="AnimationPlayers" index="1"]
anims/RESET = SubResource( 9 )
anims/idle = SubResource( 6 )
anims/spin = SubResource( 4 )

[node name="BlurTop" type="AnimationPlayer" parent="AnimationPlayers" index="2"]
anims/RESET = SubResource( 7 )
anims/idle = SubResource( 8 )
anims/spin = SubResource( 5 )

[node name="StateMachine" parent="." index="7"]
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 3 )
state_owner_path = NodePath("../..")
idle_time = 0.4
transition = "Charge"
timer_path = NodePath("../../IdleTimer")

[node name="Bounce" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 4 )
state_owner_path = NodePath("../..")
wall_particle_path = NodePath("../../WallParticles")
max_collisions = 5
transition = "Idle"
decay = 0.125

[node name="Charge" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 9 )
state_owner_path = NodePath("../..")
string_path = NodePath("../../Sprites/String")
ring_path = NodePath("../../Sprites/Ring")
tween_path = NodePath("../../Tween")
charge_time = 0.9
release_time = 0.15

[node name="Vision" parent="." index="8"]
visible = true

[node name="CollisionShape2D" parent="Vision" index="0"]
shape = SubResource( 3 )

[node name="IdleTimer" type="Timer" parent="." index="9"]
one_shot = true

[node name="NormalFlashTimer" type="Timer" parent="." index="10"]
one_shot = true

[node name="NormalFlashEndTimer" type="Timer" parent="." index="11"]
one_shot = true

[node name="WallParticles" type="CPUParticles2D" parent="." index="12"]
emitting = false
amount = 16
lifetime = 0.2
one_shot = true
explosiveness = 0.76
local_coords = false
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector2( -1, 0 )
spread = 66.89
initial_velocity = 48.0
color_ramp = SubResource( 10 )

[node name="Tween" type="Tween" parent="." index="13"]
